--- a/application/admin/view/member/edit.html
+++ b/application/admin/view/member/edit.html
@@ -1,6 +1,6 @@
 {include file="layout/head"/}
 
-<title>添加用户</title>
+<title>编辑用户</title>
 <meta name="keywords" content="H-ui.admin v3.1,H-ui网站后台模版,后台模版下载,后台管理系统模版,HTML后台模版下载">
 <meta name="description" content="H-ui.admin v3.1，是一款由国人开发的轻量级扁平化网站后台模板，完全免费开源的网站后台管理系统模版，适合中小型CMS后台系统。">
 </head>
@@ -8,22 +8,23 @@
 <article class="page-container">
 	<form action="" method="post" class="form form-horizontal" id="form-member-add">
 		<input type="hidden" name="act" value="{$act}">
+		<input type="hidden" name="id" value="{$info.id}">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>用户名：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="nickname" name="nickname">
+				<input type="text" class="input-text" value="{$info.nickname}" placeholder="" id="nickname" name="nickname">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>手机：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="mobile" name="mobile">
+				<input type="text" class="input-text" value="{$info.mobile}" placeholder="" id="mobile" name="mobile">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>邮箱：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" placeholder="@" name="email" id="email">
+				<input type="text" class="input-text" value="{$info.email}" placeholder="@" name="email" id="email">
 			</div>
 		</div>
 		<div class="row cl">
@@ -32,10 +33,20 @@
 				<span class="select-box">
 					<select class="select" size="1" name="group_id">
 						{foreach name="group" item="vo"}
-							<option value="{$vo.id}">{$vo.name}</option>
+							{if condition="$info.group_id == $vo.id"}
+								<option value="{$vo.id}" selected>{$vo.name} </option>
+							{else/}
+								<option value="{$vo.id}">{$vo.name}</option>
+							{/if}
 						{/foreach}
 					</select>
 				</span>
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-3">余额：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" class="input-text" value="{$info.money}" placeholder="¥" name="money" id="money">
 			</div>
 		</div>
 		<div class="row cl">
@@ -46,8 +57,21 @@
 					<label for="is_distribut-1">是</label>
 				</div>
 				<div class="radio-box">
-					<input type="radio" name="is_distribut" id="is_distribut-2" value="0" checked>
+					<input type="radio" name="is_distribut" id="is_distribut-2" value="0">
 					<label for="is_distribut-2">否</label>
+				</div>
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-3">状态：</label>
+			<div class="formControls col-xs-8 col-sm-9 skin-minimal">
+				<div class="radio-box">
+					<input type="radio" name="status" id="status-1" value="1">
+					<label for="status-1">启用</label>
+				</div>
+				<div class="radio-box">
+					<input type="radio" name="status" id="status-2" value="0">
+					<label for="status-2">停用</label>
 				</div>
 			</div>
 		</div>
@@ -68,6 +92,21 @@
 <script type="text/javascript" src="/__STATIC__/lib/jquery.validation/1.14.0/messages_zh.js"></script>
 <script type="text/javascript">
 $(function(){
+	var is_distribut = "{$info.is_distributor}";
+	var status = "{$info.status}";
+	
+	if (is_distribut == 1) {
+		$('#is_distribut-1').attr('checked',true);
+	} else {
+		$('#is_distribut-2').attr('checked',true);
+	}
+
+	if (status == 1) {
+		$('#status-1').attr('checked',true);
+	} else {
+		$('#status-2').attr('checked',true);
+	}
+	
 	$('.skin-minimal input').iCheck({
 		checkboxClass: 'icheckbox-blue',
 		radioClass: 'iradio-blue',
