--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -15,11 +15,13 @@
             <button type="submit" class="btn btn-success radius" id="" name=""><i class="Hui-iconfont">&#xe665;</i>
                 搜用户</button>
         </div>
-        <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()"
-                    class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;"
-                    onclick="member_add('添加用户','add.html','','510')" class="btn btn-primary radius"><i
-                        class="Hui-iconfont">&#xe600;</i> 添加用户</a></span> <span class="r">共有数据：<strong>88</strong>
-                条</span> </div>
+        <div class="cl pd-5 bg-1 bk-gray mt-20">
+            <span class="l">
+                <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
+                <a href="javascript:;" onclick="member_add('添加用户','add.html','','510')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加用户</a>
+            </span>
+            <span class="r">共有数据：<strong>88</strong>条</span>
+        </div>
         <div class="mt-20">
             <table class="table table-border table-bordered table-hover table-bg table-sort">
                 <thead>
@@ -30,9 +32,9 @@
                         <th width="130">手机</th>
                         <th width="150">邮箱</th>
                         <th width="120">分组</th>
-                        <th width="50">等级</th>
                         <th width="120">余额</th>
                         <th width="50">分销商</th>
+                        <th width="50">分销等级</th>
                         <th width="150">上级</th>
                         <th width="110">注册时间</th>
                         <th width="70">状态</th>
@@ -49,9 +51,9 @@
                             <td>{$vo.mobile}</td>
                             <td>{$vo.email}</td>
                             <td>{$vo.group_id|group_name}</td>
-                            <td>{$vo.level}</td>
                             <td>{$vo.money}</td>
                             <td>{if condition="$vo.is_distributor == 1"}是{else/}否{/if}</td>
+                            <td>{$vo.distributor_level}</td>
                             <td>{$vo.id|first_leader}</td>
                             <td>{$vo.register_time|date="Y-m-d",###}</td>
                             <td class="td-status">
@@ -63,12 +65,12 @@
                             </td>
                             <td class="td-manage">
                                 {if condition="$vo.status == 1"}
-                                    <a style="text-decoration:none" onClick="member_stop(this,'10001','{$vo.id}')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe6e1;</i></a>
+                                    <a style="text-decoration:none" onClick="member_stop(this,'{$vo.id}')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe6e1;</i></a>
                                 {else/}
-                                    <a style="text-decoration:none" onClick="member_start(this,id,'{$vo.id}')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe631;</i></a>
+                                    <a style="text-decoration:none" onClick="member_start(this,'{$vo.id}')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe631;</i></a>
                                 {/if}
-                                 <a title="编辑"
-                                    href="javascript:;" onclick="member_edit('编辑','eidt.html','4','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
+                                <a title="编辑"
+                                    href="javascript:;" onclick="member_edit('编辑用户','/admin/member/edit?id={$vo.id}','4','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
                                 <a style="text-decoration:none" class="ml-5"onClick="change_password('修改密码','change-password.html','10001','600','270')" href="javascript:;" title="修改密码"><i class="Hui-iconfont">&#xe63f;</i></a>
                                 <a title="删除" href="javascript:;" onclick="member_del(this,'{$vo.id}')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a>
                             </td>
@@ -84,20 +86,21 @@
 
     <!--请在下方写此页面业务相关的脚本-->
     <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
-    <!-- <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script> -->
+    <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="/__STATIC__/lib/laypage/1.2/laypage.js"></script>
     <script type="text/javascript">
-        // $(function () {
-        //     $('.table-sort').dataTable({
-        //         "aaSorting": [[1, "desc"]],//默认第几个排序
-        //         "bStateSave": true,//状态保存
-        //         "aoColumnDefs": [
-        //             //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-        //             { "orderable": false, "aTargets": [0, 8, 9] }// 制定列不参与排序
-        //         ]
-        //     });
+        $(function () {
+            $('.table-sort').dataTable({
+                "aaSorting": [[1, "desc"]],//默认第几个排序
+                "bStateSave": true,//状态保存
+                "aoColumnDefs": [
+                    //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+                    { "orderable": false, "aTargets": [0, 8, 9] }// 制定列不参与排序
+                ]
+            });
 
-        // });
+        });
+        var url = '{:url("admin/member/handle")}';
         /*用户-添加*/
         function member_add(title, url, w, h) {
             layer_show(title, url, w, h);
@@ -107,18 +110,18 @@
             layer_show(title, url, w, h);
         }
         /*用户-停用*/
-        function member_stop(obj, id, user_id) {
+        function member_stop(obj, user_id) {
             layer.confirm('确认要停用吗？', function (index) {
                 $.ajax({
                     type: 'POST',
-                    url: '{:url("admin/member/handle")}',
+                    url: url,
                     dataType: 'json',
                     data: {'id':user_id,'act':"status",'status':0},
                     success: function (data) {
                         if (data.code == 1) {
-                            $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_start(this,id,{$vo.id})" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>');
-                            $(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已停用</span>');
-                            $(obj).remove();
+                            // $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_start(this,id,{$vo.id})" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe6e1;</i></a>');
+                            // $(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已停用</span>');
+                            // $(obj).remove();
                             layer.msg('已停用!', { icon: 5, time: 1000 },function(){
                                 window.location.reload();
                             });
@@ -135,18 +138,18 @@
         }
 
         /*用户-启用*/
-        function member_start(obj, id, user_id) {
+        function member_start(obj, user_id) {
             layer.confirm('确认要启用吗？', function (index) {
                 $.ajax({
                     type: 'POST',
-                    url: '{:url("admin/member/handle")}',
+                    url: url,
                     dataType: 'json',
                     data: {'id':user_id,'act':"status",'status':1},
                     success: function (data) {
                         if (data.code == 1) {
-                            $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_stop(this,id,{$vo.id})" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>');
-                            $(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
-                            $(obj).remove();
+                            // $(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="member_stop(this,id,{$vo.id})" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe631;</i></a>');
+                            // $(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
+                            // $(obj).remove();
                             layer.msg('已启用!', { icon: 6, time: 1000 },function(){
                                 window.location.reload();
                             });
@@ -156,9 +159,8 @@
                         
                     },
                     error: function (data) {
-                        console.log(data);
+                        // console.log(data);
                         layer.alert("服务器繁忙, 请联系管理员!");
-                        // console.log(data.msg);
                     },
                 });
             });
@@ -176,7 +178,7 @@
             layer.confirm('确认要删除吗？', function (index) {
                 $.ajax({
                     type: 'POST',
-                    url: '{:url("admin/member/handle")}',
+                    url: url,
                     data: {'id':id,'act':"del"},
                     dataType: 'json',
                     success: function (data) {
@@ -210,7 +212,7 @@
                 layer.confirm('确认要删除吗？', function (index) {
                     $.ajax({
                         type: 'POST',
-                        url: '{:url("admin/member/handle")}',
+                        url: url,
                         data: {'id':check_val,'act':"del"},
                         dataType: 'json',
                         success: function (data) {
@@ -229,7 +231,6 @@
                     });
                 });
             }
-            
         }
     </script>
 </body>
