--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -20,7 +20,7 @@
                 <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
                 <a href="javascript:;" onclick="member_add('添加用户','add.html','','510')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加用户</a>
             </span>
-            <span class="r">共有数据：<strong>88</strong>条</span>
+            <span class="r">共有数据：<strong>{$list->total()}</strong>条</span>
         </div>
         <div class="mt-20">
             <table class="table table-border table-bordered table-hover table-bg table-sort">
@@ -71,35 +71,34 @@
                                 {/if}
                                 <a title="编辑"
                                     href="javascript:;" onclick="member_edit('编辑用户','/admin/member/edit?id={$vo.id}','4','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
-                                <a style="text-decoration:none" class="ml-5"onClick="change_password('修改密码','change-password.html','10001','600','270')" href="javascript:;" title="修改密码"><i class="Hui-iconfont">&#xe63f;</i></a>
+                                <a style="text-decoration:none" class="ml-5"onClick="change_password('修改密码','/admin/member/change_password?id={$vo.id}','10001','600','270')" href="javascript:;" title="修改密码"><i class="Hui-iconfont">&#xe63f;</i></a>
                                 <a title="删除" href="javascript:;" onclick="member_del(this,'{$vo.id}')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a>
                             </td>
                         </tr>
                     {/foreach}
                 </tbody>
             </table>
+            <div class="pages">{$list->render()}</div>
         </div>
     </div>
-    <!--_footer 作为公共模版分离出去-->
-    {include file='layout/footer' /}
-    <!--/_footer 作为公共模版分离出去-->
 
-    <!--请在下方写此页面业务相关的脚本-->
+    {include file='layout/footer' /}
+
     <script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
     <script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="/__STATIC__/lib/laypage/1.2/laypage.js"></script>
+    <!-- <script type="text/javascript" src="/__STATIC__/lib/laypage/1.2/laypage.js"></script> -->
     <script type="text/javascript">
-        $(function () {
-            $('.table-sort').dataTable({
-                "aaSorting": [[1, "desc"]],//默认第几个排序
-                "bStateSave": true,//状态保存
-                "aoColumnDefs": [
-                    //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-                    { "orderable": false, "aTargets": [0, 8, 9] }// 制定列不参与排序
-                ]
-            });
+        // $(function () {
+        //     $('.table-sort').dataTable({
+        //         "aaSorting": [[1, "desc"]],//默认第几个排序
+        //         "bStateSave": true,//状态保存
+        //         "aoColumnDefs": [
+        //             //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
+        //             { "orderable": false, "aTargets": [0, 8, 9] }// 制定列不参与排序
+        //         ]
+        //     });
 
-        });
+        // });
         var url = '{:url("admin/member/handle")}';
         /*用户-添加*/
         function member_add(title, url, w, h) {
